invest/OSGeo4W/apps/grass/grass-6.4.2RC2/include/grass/imagedefs.h


/* alloc.c */
void *I_malloc(size_t);

void *I_realloc(void *, size_t);

int I_free(void *);

double **I_alloc_double2(int, int);

int *I_alloc_int(int);

int **I_alloc_int2(int, int);

int I_free_int2(int **);

int I_free_double2(double **);

double ***I_alloc_double3(int, int, int);

int I_free_double3(double ***);


/* ask_group.c */
int I_ask_group_old(char *, char *);


/* eol.c */
int I_get_to_eol(char *, int, FILE *);


/* find.c */
int I_find_group(const char *);

int I_find_group_file(const char *, const char *);

int I_find_subgroup(const char *, const char *);

int I_find_subgroup_file(const char *, const char *, const char *);


/* fopen.c */
FILE *I_fopen_group_file_new(const char *, const char *);

FILE *I_fopen_group_file_append(const char *, const char *);