OSGeo4W/apps/grass/grass-6.4.2RC2/include/grass/imagery.h



struct SubSig
{
    double N;
    double pi;
    double *means;
    double **R;
    double **Rinv;
    double cnst;
    int used;
};


struct ClassData
{
    int npixels;
    int count;
    double **x; 	       /* pixel list: x[npixels][nbands] */
    double **p; 	       /* prob        p[npixels][subclasses] */
};


struct ClassSig
{
    long classnum;
    char *title;
    int used;
    int type;
    int nsubclasses;
    struct SubSig *SubSig;
    struct ClassData ClassData;
};